--- a/Frontend/inventory_management_system/src/index.css
+++ b/Frontend/inventory_management_system/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /*color: #2e2c2c; /* Sets the text color to black */
 }
 
 code {
